<resources>
    <string name="app_name">TrackMyFood4</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="removeAll">Clear</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="addNew">Save</string>
    <string name="mass">Mass</string>
</resources>
