<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/newFoodType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/newFoodProtein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numeric="integer"
                android:hint="@string/protein"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/newFoodCarbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numeric="integer"
                android:hint="@string/carbs"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/newFoodFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numeric="integer"
                android:hint="@string/fat"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/newFoodMass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numeric="integer"
                android:hint="@string/mass"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/addNewType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addNewTypeClick"
                android:text="@string/addNew" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0.6"
        android:background="@android:color/holo_orange_dark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/water"
            android:layout_width="20pt"
            android:layout_height="20pt"
            android:onClick="addWater"/>

        <EditText
            android:id="@+id/todayFoodMass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="1"
            android:numeric="integer"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/foodTypes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/editFoodType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="editFoodTypeAction"
            android:text="@string/edit" />

        <Button
            android:id="@+id/addTodayFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="addTodayFoodClick"
            android:text="@string/add" />

    </LinearLayout>

    <ListView
        android:id="@+id/foodList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="50"
        android:background="@android:color/holo_blue_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0.6"
        android:background="@android:color/holo_orange_dark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/removeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="clearFoodList"
            android:text="@string/removeAll" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.6"
            android:background="@android:color/holo_orange_dark"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein" />

            <TextView
                android:id="@+id/protein"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbs" />

            <TextView
                android:id="@+id/carbohydrates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat" />

            <TextView
                android:id="@+id/fat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                 />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
